<package>
  <name>rosserial_arduino</name>
  <version>0.9.1</version>
  <description>
    rosserial for Arduino/AVR platforms.
  </description>
  <author>Francisco Miranda</author>
  <maintainer email="fmiranda@robowind.com">Francisco Miranda</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_arduino</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>arduino-core</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosserial_python</run_depend>
</package>
