<?xml version="1.0"?>
<package format="2">
  <name>robobus</name>
  <version>0.0.0</version>
  <description>
  	Package containing the robobus node used to 
  	maintain and control access to the robobus.
  </description>

  <maintainer email="alittleton@robowind.com">Alexander Littleton</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>messsage_generation</build_depend>
  <build_depend>roscpp</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
  
</package>
