<?xml version="1.0"?>
<package format="2">
  <name>robot_joystick_controller</name>
  <version>0.0.0</version>
  <description>A package that provides the robot_joystick_controller 
               node that allows the robot to be controlled by a 
               joystick
  </description>

  <maintainer email="alittleton@robowind.com">Alexander Littleton</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>messsage_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dc_motor_controller</build_depend>
  <build_depend>joy</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>dc_motor_controller</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>

  </export>
  
</package>
