<?xml version="1.0"?>
<package>
  <name>peep_msgs</name>
  <version>0.0.0</version>
  <description>The peep_msgs package</description>

  <maintainer email="fmiranda@robowind.com">Francisco Miranda </maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/peep_lsg</url> -->

  <author email="fmiranda@robowind.com">Francisco Miranda</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>



  <export>

  </export>
</package>
