<?xml version="1.0"?>
<package format="2">
  <name>web_video_server</name>
  <version>0.2.1</version>
  <description>HTTP Streaming of ROS Image Topics in Multiple Formats</description>

  <maintainer email="fmiranda@robowind.com">Francisco Miranda</maintainer>
  <author email="fmiranda@robowind.com">Francisco Miranda</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>async_web_server_cpp</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>async_web_server_cpp</exec_depend>
  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
